# supertux

./: .clangd  .gitignore  meson.build  meson_options.txt
data/levels/worldmaps/: world1.stwm
src/: badguy.cpp  button.cpp  button.h  configfile.cpp  gameloop.cpp  gameobjs.cpp  globals.cpp  globals.h  helper.h  high_scores.cpp  high_scores.h  intro.cpp  level.cpp  leveleditor.cpp  leveleditor.h  menu.cpp  meson.build  music_manager.cpp  music_manager.h  particlesystem.cpp  player.cpp  player.h  resources.cpp  resources.h  screen.cpp  screen.h  setup.cpp  sound.cpp  sound.h  special.cpp  sprite.cpp  supertux.cpp  text.cpp  texture.cpp  texture.h  tile.cpp  timer.h  title.cpp  world.cpp  worldmap.cpp  (+1 more)
src/addon/: addon_manager.cpp  downloader.cpp
src/badguy/: ghoul.cpp  ghoul.hpp
src/editor/: editor.cpp
src/object/: path_walker.cpp  path_walker.hpp  platform.cpp  platform.hpp  rock.cpp  tilemap.cpp  tilemap.hpp
src/scripting/: platform.cpp  tilemap.cpp
src/supertux/: game_session.cpp  sector.cpp  sector.hpp  world.cpp
