supertux_src = [
'badguy.cpp',
'button.cpp',
'collision.cpp',
'configfile.cpp',
'intro.cpp',
'gameloop.cpp',
'globals.cpp',
'high_scores.cpp',
'level.cpp',
'leveleditor.cpp',
'lispreader.cpp',
'menu.cpp',
'particlesystem.cpp',
'physic.cpp',
'player.cpp',
'scene.cpp',
'screen.cpp',
'setup.cpp',
'special.cpp',
'supertux.cpp',
'text.cpp',
'texture.cpp',
'timer.cpp',
'title.cpp',
'type.cpp',
'world.cpp',
'worldmap.cpp',
'tile.cpp',
'mousecursor.cpp',
'resources.cpp',
'gameobjs.cpp',
'sprite.cpp',
'sprite_manager.cpp'
]

executable('supertux-milestone1', supertux_src,
           win_subsystem: 'windows',
           dependencies: sdl1)